# Crabsformer

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  NOTES.md  README.md  rustfmt.toml
.github/ISSUE_TEMPLATE/: 2-suggestion.md  3-documentation.md  4-discussion.md  5-other.md
src/: attributes.rs  error.rs  lib.rs  matrix.rs  old_vector.rs  prelude.rs  slice.rs  utils.rs  vector.rs
src/builders/: dimensional.rs  four_dimensional.rs  full.rs  linspace.rs  mod.rs  one_dimensional.rs  ones.rs  range.rs  three_dimensional.rs  two_dimensional.rs  zeros.rs
src/matrix/: builders.rs  errors.rs  indexing.rs  iterators.rs  loaders.rs  operations.rs  slicing.rs
src/properties/: dim.rs  mod.rs  shape.rs  size.rs
src/vector/: builders.rs  errors.rs  indexing.rs  iterators.rs  loaders.rs  operations.rs  slicing.rs
tests/: full_of.rs  linspace.rs  matrix.rs  matrix_builders.rs  matrix_loaders.rs  matrix_operations.rs  matrix_valid_without_header.csv  ones.rs  range.rs  vector.rs  vector_builders.rs  vector_indexing.rs  vector_iterators.rs  vector_operations.rs  weight.csv  zeros.rs
tests/data/: dataset.csv  matrix_invalid_element.csv  matrix_invalid_inconsistent_column.csv
