[package]
name = "gulali"
description = "Gulali is an easy-to-use fundamental library for scientific computing with Rust, highly inspired by NumPy."
license = "Apache-2.0"
version = "2019.3.6"
authors = ["Bayu Aldi Yansyah <bayualdiyansyah@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/gulali/"
homepage = "https://github.com/pyk/gulali"
repository = "https://github.com/pyk/gulali"
readme = "README.md"

[dependencies]
